logs/2023-10-01.exception.log
2023-10-01 21:02:05 [crush] error: uncaughtException: Cannot read properties of undefined (reading 'Schema')
TypeError: Cannot read properties of undefined (reading 'Schema')
    at Object.<anonymous> (/home/feedbaek/Crush_Backend/controller/dbTest.js:8:33)
    at Module._compile (node:internal/modules/cjs/loader:1241:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1295:10)
    at Module.load (node:internal/modules/cjs/loader:1091:32)
    at Module._load (node:internal/modules/cjs/loader:938:12)
    at Module.require (node:internal/modules/cjs/loader:1115:19)
    at require (node:internal/modules/helpers:130:18)
    at Object.<anonymous> (/home/feedbaek/Crush_Backend/app.js:11:16)
    at Module._compile (node:internal/modules/cjs/loader:1241:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1295:10)
2023-10-01 21:35:22 [crush] error: uncaughtException: Unexpected identifier 'remote'
/home/feedbaek/Crush_Backend/config/mongodb.js:3
  remote: 'mongodb://host.docker.internal:27017/mylist'
  ^^^^^^

SyntaxError: Unexpected identifier 'remote'
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1153:20)
    at Module._compile (node:internal/modules/cjs/loader:1205:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1295:10)
    at Module.load (node:internal/modules/cjs/loader:1091:32)
    at Module._load (node:internal/modules/cjs/loader:938:12)
    at Module.require (node:internal/modules/cjs/loader:1115:19)
    at require (node:internal/modules/helpers:130:18)
    at Object.<anonymous> (/home/feedbaek/Crush_Backend/database/mongoose.js:3:18)
    at Module._compile (node:internal/modules/cjs/loader:1241:14)
